# Bach

./: CMakeLists.txt  README.md  bmutex.h  bthead.cpp  bthread.h  eval.cpp  eval.h  magic.cpp  magic.h  main.cpp  mcts.h  move.cpp  move.h  movelist.h  notation.cpp  notation.h  position.cpp  position.h  prng.h  pseudomove.cpp  pseudomove.h  pstate.h  random.cpp  random.h  roll.cpp  roll.h  score.cpp  score.h  search.cpp  search.h  stopwatch.cpp  stopwatch.h  tests.cpp  tests.h  types.h
